--- a/css/style.css
+++ b/css/style.css
@@ -333,8 +333,6 @@ body {
       outline: 1.2rem solid rgba(40, 180, 133, 0.8);
       z-index: 2;
       transform: scale(1.1) translateY(-1rem); }
-    .composition .composition__img:hover .composition .composition__img:not(:hover) {
-      transform: scale(0.5); }
     .composition .composition__img-1 {
       top: -1rem;
       left: 10%; }
@@ -344,6 +342,8 @@ body {
     .composition .composition__img-3 {
       top: 10rem;
       left: 30%; }
+  .composition:hover .composition__img:not(:hover) {
+    transform: scale(0.95); }
 
 .feature-box {
   text-align: center;
@@ -401,7 +401,7 @@ body {
             font-size: 5.6rem;
             font-weight: 100; }
           .tour-card__side--back__contact .contact__price-box-1 > *::selection {
-            background-color: rgba(236, 150, 150, 0.95); }
+            background-color: rgba(236, 189, 150, 0.95); }
           .tour-card__side--back__contact .contact__price-box-2 > *::selection {
             background-color: rgba(150, 236, 169, 0.95); }
           .tour-card__side--back__contact .contact__price-box-3 > *::selection {
