--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -44,7 +44,7 @@
                         font-weight: 100; 
                     }    
                     
-                    &-1 > *::selection{ background-color: rgba(236, 150, 150, .95) }
+                    &-1 > *::selection{ background-color: rgba(236, 189, 150, 0.95) }
                     &-2 > *::selection{ background-color: rgba(150, 236, 169, 0.95) }
                     &-3 > *::selection{ background-color: rgba(133, 183, 248, 0.95) }
                 }
