--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -14,7 +14,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        box-shadow: $color-box-shadow-light;
+        box-shadow: $color-box-shadow-slight;
         border-radius: 5px;
         transition: all .85s ease;
 
