--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,10 +12,10 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/shape-box";
 
 @import "layouts/grid";
 @import "layouts/header";
 @import "layouts/main";
-
 
 @import "pages/home";
