--- a/css/style.css
+++ b/css/style.css
@@ -460,6 +460,56 @@ body {
     .card__list li:not(:last-child) {
       border-bottom: 1px solid rgba(0, 0, 0, 0.25); }
 
+.story {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #777;
+  background-color: rgba(255, 255, 255, 0.6);
+  height: 25rem;
+  width: 80%;
+  padding: 5rem 8.5rem;
+  margin: 0 auto;
+  transform: skewX(-7deg);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  word-spacing: 3px; }
+  .story__shape {
+    float: left;
+    height: 15rem;
+    width: 15rem;
+    shape-outside: circle(50%);
+    clip-path: circle(50%);
+    -webkit-clip-path: circle(50%);
+    transform: translateX(-4rem) skewX(7deg);
+    position: relative; }
+  .story__img {
+    height: 100%;
+    transition: all .35s;
+    z-index: 1;
+    backface-visibility: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  .story__img-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    color: #eee;
+    font-size: 2rem;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1.5;
+    opacity: 0;
+    transition: all .35s;
+    z-index: 2; }
+  .story__text {
+    transform: skewX(7deg);
+    line-height: 1.8; }
+  .story:hover .story__img-content {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    filter: blur(3px) brightness(80%); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -534,8 +584,11 @@ body {
     transform: skewY(7deg); }
 
 .section-tours {
-  background-color: #f7f7f7;
   margin-top: -10rem;
   padding: 25rem 0 15rem;
-  font-size: 2.6rem;
-  color: black; }
+  background-color: #f7f7f7;
+  font-size: 2.6rem; }
+
+.section-stories {
+  padding: 10rem 0;
+  background-color: #777; }
