Complete feature-stories layout

--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,20 @@ body {
   .story:hover .story__img {
     filter: blur(3px) brightness(80%); }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  opacity: .15;
+  z-index: -1; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -591,4 +605,4 @@ body {
 
 .section-stories {
   padding: 10rem 0;
-  background-color: #777; }
+  position: relative; }
