--- a/sass/layouts/_main.scss
+++ b/sass/layouts/_main.scss
@@ -29,6 +29,6 @@
 }
 
 .section-stories {
-    padding: 10rem 0;   
-    background-color: $color-grey-dark;        
+    padding: 10rem 0;       
+    position: relative;
 }
