--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/feature-box";
 @import "components/card";
 @import "components/shape-box";
+@import "components/bg-video";
 
 @import "layouts/grid";
 @import "layouts/header";
