--- a/sass/components/_shape-box.scss
+++ b/sass/components/_shape-box.scss
@@ -26,6 +26,7 @@
     &__img {
         height: 100%;
         transition: all .35s;
+        transform: scale(1.2);
         z-index: 1;      
         backface-visibility: hidden;
         box-shadow: $color-box-shadow-slight;
@@ -57,6 +58,7 @@
     }
 
     &:hover &__img{
+        transform: translateX(-1rem) scale(1);
         filter: blur(3px) brightness(80%);
     }
 }
