Complete making input forms

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -40,4 +40,4 @@ $skew__shape-box: 12deg;
 $color-text-shadow: 0 5px 10px rgba($color-dark, .15);
 $color-box-shadow-slight: 0 0 10px rgba($color-dark, .15);
 $color-box-shadow-medium: 0 0 10px rgba($color-dark, .25);
-$color-box-shadow-dark: 0 0 10px rgba($color-dark, .5);
+$color-box-shadow-strong: 0 0 10px rgba($color-dark, .5);
