--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,3 +32,10 @@
     padding: 10rem 0;       
     position: relative;
 }
+
+.section-bookings {
+    padding: 10rem 0;
+    background-image: linear-gradient(to right bottom,
+    $color-primary-light,
+    $color-primary-dark);
+}
