--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,55 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.booking {
+  transform: translateX(-10%);
+  width: 120%;
+  height: 65rem;
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 50%, transparent 50%), url("../img/nat-10.jpg");
+  background-size: cover;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  padding: 7.5rem 0;
+  padding-left: 8rem; }
+  .booking .header-secondary {
+    font-size: 4.6rem !important;
+    font-weight: 500 !important; }
+  .booking__forms {
+    width: 50%;
+    color: #f7f7f7;
+    font-size: 2rem; }
+  .booking__form {
+    position: relative; }
+    .booking__form:not(:last-child) {
+      margin-bottom: 5.5rem; }
+    .booking__form > * {
+      font-size: inherit; }
+  .booking__input {
+    color: #777;
+    padding: 1.8rem 0;
+    width: 75%;
+    border: none;
+    border-bottom: 3px solid transparent;
+    outline: none;
+    text-indent: 2rem; }
+    .booking__input:focus {
+      cursor: pointer;
+      color: #000; }
+    .booking__input:focus::-webkit-input-placeholder {
+      transition: all .5s;
+      color: transparent !important; }
+    .booking__input:focus + label {
+      color: #777;
+      opacity: 1;
+      top: 6rem; }
+  .booking__label {
+    transition: all .5s;
+    position: absolute;
+    left: 2rem;
+    top: 2rem;
+    color: inherit;
+    opacity: 0; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -608,3 +657,7 @@ body {
 .section-stories {
   padding: 10rem 0;
   position: relative; }
+
+.section-bookings {
+  padding: 10rem 0;
+  background-image: linear-gradient(to right bottom, #55c57a, #28b485); }
