--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/card";
 @import "components/shape-box";
 @import "components/bg-video";
+@import "components/form";
 
 @import "layouts/grid";
 @import "layouts/header";
