--- a/css/style.css
+++ b/css/style.css
@@ -527,31 +527,31 @@ body {
     object-fit: cover; }
 
 .booking {
-  transform: translateX(-10%);
-  width: 120%;
-  height: 65rem;
+  margin: 0 auto;
+  width: 95%;
+  height: 50rem;
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.85) 0%, rgba(255, 255, 255, 0.85) 50%, transparent 50%), url("../img/nat-10.jpg");
   background-size: cover;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
-  padding: 7.5rem 0;
-  padding-left: 8rem; }
+  padding: 6.5rem 0;
+  padding-left: 7rem; }
   .booking .header-secondary {
-    font-size: 4.6rem !important;
+    font-size: 3.6rem !important;
     font-weight: 500 !important; }
   .booking__forms {
     width: 50%;
     color: #f7f7f7;
-    font-size: 2rem; }
+    font-size: 1.6rem; }
   .booking__form {
     position: relative; }
     .booking__form:not(:last-child) {
-      margin-bottom: 5.5rem; }
+      margin-bottom: 4.5rem; }
     .booking__form > * {
       font-size: inherit; }
   .booking__input {
     color: #777;
-    padding: 1.8rem 0;
+    padding: 1.5rem 0;
     width: 75%;
     border: none;
     border-bottom: 3.5px solid transparent;
