--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,8 @@
 .booking {            
-    transform: translateX(-10%);
-    width: 120%;
-    height: 65rem;
+    // transform: translateX(-10%);
+    margin: 0 auto;
+    width: 95%;
+    height: 50rem;
     background-image: linear-gradient(105deg,
         rgba($color-grey-light-1, .85) 0%,        
         rgba($color-grey-light-1, .85) 50%,
@@ -10,34 +11,33 @@
     background-size: cover;
     box-shadow: $color-box-shadow-strong;
     border-radius: 5px;
-    padding: 7.5rem 0;
-    padding-left: 8rem;
+    padding: 6.5rem 0;
+    padding-left: 7rem;
     
     & .header-secondary {
-        font-size: $font-size-xxxl !important;
+        font-size: $font-size-xxl !important;
         font-weight: 500 !important;
     }
 
     &__forms {
         width: 50%;
         color: $color-grey-light;
-        font-size: $font-size-l;
+        font-size: $font-size-m;
     }
 
     &__form {        
         position: relative;
 
-        &:not(:last-child) { margin-bottom: 5.5rem; }
+        &:not(:last-child) { margin-bottom: 4.5rem; }
 
-        & > * {
-            
+        & > * {            
             font-size: inherit;
         }
     }
 
     &__input {                
         color: $color-grey-dark;
-        padding: 1.8rem 0;
+        padding: 1.5rem 0;
         width: 75%;
         border: none;
         border-bottom: 3.5px solid transparent;
