--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,42 @@ body {
     color: inherit;
     opacity: 0; }
 
+.form__radio-group {
+  position: relative;
+  color: #777;
+  display: inline-block;
+  width: 49%; }
+  .form__radio-group .form__radio-input {
+    opacity: 0; }
+    .form__radio-group .form__radio-input:checked ~ .form__radio-label .form__radio-btn::after {
+      opacity: 1; }
+  .form__radio-group .form__radio-label {
+    display: inline-block;
+    padding-left: 1rem;
+    cursor: pointer; }
+  .form__radio-group .form__radio-btn {
+    position: absolute;
+    top: -.5rem;
+    left: -1rem;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    border: 5px solid #28b485;
+    display: block; }
+    .form__radio-group .form__radio-btn::after {
+      content: "";
+      transition: all .25s;
+      opacity: 0;
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 1.35rem;
+      width: 1.35rem;
+      border-radius: 50%;
+      background-color: #28b485; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -643,7 +679,7 @@ body {
 
 .section-features {
   transform: skewY(-7deg);
-  margin-top: -10rem;
+  margin-top: -15rem;
   padding: 18rem 0;
   background-image: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(40, 180, 133, 0.8)), url("/img/nat-1-large.jpg");
   background-position: top;
@@ -652,7 +688,7 @@ body {
     transform: skewY(7deg); }
 
 .section-tours {
-  margin-top: -10rem;
+  margin-top: -15rem;
   padding: 25rem 0 15rem;
   background-color: #f7f7f7;
   font-size: 2.6rem; }
