Complete the UI

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,12 @@ body {
 .u-mb-xl {
   margin-bottom: 12.5rem; }
 
+.u-pull-left {
+  float: left; }
+
+.u-pull-right {
+  float: right; }
+
 .btn {
   position: relative;
   z-index: 0;
@@ -622,6 +628,66 @@ body {
       border-radius: 50%;
       background-color: #28b485; }
 
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000000;
+  height: 100%;
+  width: 100%;
+  border: 1px solid black;
+  background-color: rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  visibility: hidden; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 1rem;
+    right: 2.5rem;
+    font-size: 3.6rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .3s; }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #777;
+    width: 70%;
+    background-color: #ffffff;
+    border-radius: 5px;
+    overflow: hidden;
+    display: table;
+    transition: all .5s .2s;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5); }
+  .popup__left {
+    display: table-cell;
+    width: 33.33%; }
+  .popup__right {
+    text-align: left;
+    display: table-cell;
+    width: 66.67%;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup__text {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eee; }
+  .popup__img {
+    display: block;
+    width: 100%; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -673,6 +739,48 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -65%); }
+
+.footer {
+  background-color: #000; }
+  .footer__logo {
+    width: 100%;
+    padding-top: 5rem;
+    display: flex;
+    justify-content: center; }
+  .footer__img {
+    height: 10rem;
+    width: 10rem; }
+  .footer__navigation {
+    color: #f7f7f7;
+    font-size: 1.6rem;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(min-content, 1fr));
+    grid-column-gap: 13.5rem;
+    padding: 5rem 5rem 3rem; }
+    .footer__navigation-menu {
+      text-align: center; }
+    .footer__navigation-list {
+      padding: 1.4rem 2.6rem;
+      display: inline-block; }
+    .footer__navigation-item {
+      display: block;
+      text-transform: uppercase;
+      color: #eee;
+      text-decoration: none;
+      transition: .2s all; }
+      .footer__navigation-item:hover {
+        color: #000;
+        background-color: rgba(238, 238, 238, 0.95);
+        transform: translateY(-4px); }
+    .footer__navigation--left {
+      display: inline-block;
+      border-top: 1px solid #777; }
+    .footer__navigation--right {
+      display: inline-block;
+      border-top: 1px solid #777; }
+      .footer__navigation--right__text {
+        padding-top: 1.4rem;
+        padding-left: 1rem; }
 
 .section-about {
   margin-top: -25vh;
