--- a/sass/base/_ultilities.scss
+++ b/sass/base/_ultilities.scss
@@ -26,3 +26,8 @@
 .u-mb-m {margin-bottom: 5rem}
 .u-mb-l {margin-bottom: 10rem}
 .u-mb-xl {margin-bottom: 12.5rem}
+
+
+// FLOAT
+.u-pull-left {float: left;}
+.u-pull-right {float: right;}
