--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,8 +15,10 @@
 @import "components/shape-box";
 @import "components/bg-video";
 @import "components/form";
+@import "components/popup";
 
 @import "layouts/grid";
 @import "layouts/header";
+@import "layouts/footer";
 
 @import "pages/home";
