Try some NPM features

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -31,3 +31,26 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@mixin breakpoint($point) {
+    @if $point == mobile {
+        @media (max-width: 320px) {
+            @content ;
+        }
+    }
+    @else if $point == tablet {
+        @media (max-width: 860px) {
+            @content ;
+        }
+    }
+    @else if $point == laptop {
+        @media (max-width: 1200px) {
+            @content ;
+        }
+    }
+    @else if $point == desktop {
+        @media (max-width: 1600px) {
+            @content ;
+        }
+    }
+}
